ajusta cors adicionando cors para ambiente de dev e de pro

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Perfil ativo durante o desenvolvimento: dev(desenvolvimento CorsDevConfig.java) e prod(producao CorsProdConfig.java)
+spring.profiles.active=prod
+
+# Porta padrão do servidor
 server.port=8080
