correção em edição de cadastro

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Perfil ativo durante o desenvolvimento: dev(desenvolvimento CorsDevConfig.java) e prod(producao CorsProdConfig.java)
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 # Porta padrão do servidor
 server.port=8080
