ajuste de configuração de ambiente e rotas

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+# nome do projeto
 spring.application.name=proj1angular
 
+# datasource
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -10,7 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Perfil ativo durante o desenvolvimento: dev(desenvolvimento CorsDevConfig.java) e prod(producao CorsProdConfig.java)
-spring.profiles.active=dev
+spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
 # Porta padrão do servidor
 server.port=8080
