feature: criando login federado

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,17 @@ POSTGRES_PASSWORD=senha_do_banco
 
 # --- AMBIENTE ---
 SPRING_PROFILES_ACTIVE=dev
+
+# --- KEYCLOAK ---
+# Keycloak DB config
+KC_DB_NAME=kc_db_nome_do_banco
+KC_DB_USER=kc_db_usuario
+KC_DB_PASS=kc_db_senha
+
+# Keycloak app config
+KC_DB=postgres
+KC_DB_URL=jdbc:postgresql://keycloak-db:5432/keycloak
+KC_DB_USERNAME=kc_db_usuario    # mesmo usuário de KC_DB_USER 
+KC_DB_PASSWORD=kc_db_senha      # mesma senha de KC_DB_PASS 
+KEYCLOAK_ADMIN=usuario_admin
+KEYCLOAK_ADMIN_PASSWORD=senha_admin
