--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build: ./frontend
@@ -21,7 +19,7 @@ services:
       - db
 
   db:
-    image: postgres:15
+    image: ${POSTGRES_IMAGE}
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
@@ -31,5 +29,35 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  ### Adicionando o banco do Keycloak
+  keycloak-db:
+    image: ${POSTGRES_IMAGE}
+    container_name: keycloak_db
+    environment:
+      POSTGRES_DB: ${KC_DB_NAME}
+      POSTGRES_USER: ${KC_DB_USER}
+      POSTGRES_PASSWORD: ${KC_DB_PASS}
+    volumes:
+      - keycloak_data:/var/lib/postgresql/data
+
+  ### Adicionando o Keycloak
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.3
+    container_name: keycloak
+    command: start-dev
+    environment:
+      - KC_DB=${KC_DB}
+      - KC_DB_URL=${KC_DB_URL}
+      - KC_DB_USERNAME=${KC_DB_USERNAME}
+      - KC_DB_PASSWORD=${KC_DB_PASSWORD}
+      - KEYCLOAK_ADMIN=${KEYCLOAK_ADMIN}
+      - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD}
+    ports:
+      - "8081:8080"
+    depends_on:
+      - keycloak-db
+        
+## adiciona key cloack
 volumes:
   pgdata:
+  keycloak_data:
